# yamflow

./: .gitignore  README.md  __init_.py  pyproject.toml  pytest.ini  setup.py
docs/: architecture.md
src/core/: __init__.py  context.py  engine.py  errors.py
tests/: conftest.py  test_engine.py
tests/core/: test_context.py  test_engine.py
