[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awf"
version = "0.1.0"
description = "AI Workflow Framework"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "pyyaml>=6.0",
    "aiohttp>=3.8",
    "click>=8.0",
    "pydantic>=2.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true